force-app/main/default/objects/Onboarding_Note__c/Onboarding_Note__c.object-meta.xml
<CustomObject>
    <label>Onboarding Note</label>
    <nameField>
        <displayFormat>NOTE-{0000}</displayFormat>
        <label>Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>